[package]
name = "download-limit-controller"
version = "0.1.0"
description = "Windows per-app download limiter utility."
authors = ["Download Limit Controller"]
edition = "2021"

[lib]
name = "download_limit_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2", features = [] }
